<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_addPlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAddPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/title_Cancel" />
        <Button
            android:id="@+id/btnOK"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/title_OK" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/cd_music_icon" />
</LinearLayout>